fix issue with well selection on mobile and increase padding for easy selection

--- a/client/src/components/AssayPlate.css
+++ b/client/src/components/AssayPlate.css
@@ -1,6 +1,7 @@
 #assay-plate {
+  touch-action: none;
   cursor: move;
-  padding: 1em;
+  padding: 1.3em;
   background-color: mintcream;
   display: flex;
   flex-direction: column;
